--- a/cot.tests/src/main/resources/configuarations.properties
+++ b/cot.tests/src/main/resources/configuarations.properties
@@ -21,3 +21,5 @@ createalarm=https://indiatransition.test-ram.m2m.telekom.com/alarm/alarms
 
 getalarms=https://indiatransition.test-ram.m2m.telekom.com/alarm/alarms
 
+setoperation=https://indiatransition.test-ram.m2m.telekom.com/devicecontrol/operations/
+
